--- a/src/components/WebGiViewer.css
+++ b/src/components/WebGiViewer.css
@@ -2,8 +2,8 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 100%;
-    height: 70%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
